--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,19 @@ services:
   - type: web
     name: gym-backend
     plan: free
-    buildCommand: mvn clean package -DskipTests
-    startCommand: java -jar target/gimnasio-0.0.1-SNAPSHOT.jar
+    runtime: docker
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: production
+      - key: DATABASE_URL
+        value: jdbc:postgresql://your-neon-host.neon.tech/your-database-name
+      - key: DATABASE_USERNAME
+        value: your-neon-username
+      - key: DATABASE_PASSWORD
+        value: your-neon-password
+      - key: GEMINI_API_KEY
+        value: AIzaSyCtJs8m-_4-kOXXRrTh0Vpn7AcNS00LU74
+      - key: CORS_ALLOWED_ORIGINS
+        value: https://your-frontend.vercel.app,http://localhost:3000
+    healthCheckPath: /actuator/health
