--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,22 +1,34 @@
 # Server Configuration
 server.port=${PORT:8080}
 
-# CORS for production - actualizarás esto después con tu URL de Vercel
-app.cors.allowed-origins=https://tu-frontend.vercel.app,http://localhost:3000
+# CORS for production - usarás variables de entorno en Render
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
 # Gemini API Configuration
 gemini.api.key=${GEMINI_API_KEY}
 
-# Database Configuration - H2 en memoria para evitar problemas con PostgreSQL
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+# Database Configuration - PostgreSQL en Neon
+spring.datasource.url=${DATABASE_URL}?sslmode=require
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-# H2 Console (deshabilitado en producción)
-spring.h2.console.enabled=false
+# Connection pool settings para producción
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=1200000
 
 # Logging
 logging.level.cl.gym.gimnasio=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
