--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gimnasio
-spring.datasource.username=postgres
-spring.datasource.password=admin
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-
-# Gemini API Configuration
-gemini.api.key=AIzaSyCtJs8m-_4-kOXXRrTh0Vpn7AcNS00LU74
-
-server.port=8080
+spring.profiles.active=prod
