--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,16 +1,20 @@
-# Datasource Configuration for Supabase (Connection Pooler)
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:6543/postgres?user=postgres.tgrhkjzoararlmsnptqk&password=admin
-spring.datasource.username=postgres.tgrhkjzoararlmsnptqk
-spring.datasource.password=admin
+# ===============================
+# PRODUCTION CONFIG - RENDER
+# Usa variables de entorno
+# ===============================
+
+# Database Configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
 
-# Connection pool
+# Connection Pool
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.connection-timeout=30000
@@ -19,9 +23,9 @@ spring.datasource.hikari.max-lifetime=1200000
 # SSL
 spring.datasource.hikari.ssl-mode=require
 
-# Logging (para debugging)
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.jdbc=DEBUG
+# Server
+server.port=${SERVER_PORT:8080}
 
-server.port=8080
+# Logging (menos verbose en producción)
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.springframework=INFO
