--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,14 +1,20 @@
-# PRODUCTION CONFIG - RENDER
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:6543/postgres?user=postgres.tgrhkjzoararlmsnptqk&password=admin}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres.tgrhkjzoararlmsnptqk}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:6543/postgres?user=postgres.tgrhkjzoararlmsnptqk&password=admin
+spring.datasource.username=postgres.tgrhkjzoararlmsnptqk
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.batch_size=20
 
-server.port=${SERVER_PORT:8080}
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.ssl-mode=require
 
 logging.level.org.hibernate.SQL=WARN
-logging.level.org.springframework=INFO
+logging.level.org.springframework.transaction=WARN
+logging.level.cl.gym.gimnasio.service=DEBUG
+
+server.port=8080
