--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,20 +1,24 @@
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:6543/postgres?user=postgres.tgrhkjzoararlmsnptqk&password=admin
-spring.datasource.username=postgres.tgrhkjzoararlmsnptqk
-spring.datasource.password=admin
+# Datasource Configuration
+spring.datasource.url=jdbc:postgresql://ep-noisy-moon-a4kzrgle-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require&channel_binding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_yx2OI3MFSrkD
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 
+# Hikari Connection Pool
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.ssl-mode=require
 
+# Logging
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.springframework.transaction=WARN
 logging.level.cl.gym.gimnasio.service=DEBUG
 
-server.port=8080
+# Server
+server.port=${PORT:8080}
